[package]
name = "srt_parser"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A simple SubRip file parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
itertools = "0.10.5"
peg = "0.8.1"
time = "0.3.15"
